[package]
name = "solana-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
solana-sdk = "1.18"
base58 = "0.2"
poem = "3.1.11"
axum = "0.8.4"
hyper = "1.6.0"
base64 = "0.22.1"
spl-token = "8.0.0"
