[package]
name = "solana-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
poem = { version = "3.0", features = ["compression"] }
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana dependencies - use compatible versions
solana-sdk = "2.2"
solana-client = "2.2"

# SPL Token dependencies - use compatible versions
spl-token = "6.0"
spl-associated-token-account = "4.0"

# Encoding
base58 = "0.2"
base64 = "0.22"

# Error handling
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
